--- a/app/views/posts.scala.html
+++ b/app/views/posts.scala.html
@@ -21,9 +21,12 @@
   </ul>
 </div>
 <div class="pagebreak"></div>
-<p><a href="http://www.onjest.pl">http://www.onjest.pl</a></p>
+
+<h2>Lectio Divina</h2>
+<h1>Modlitwa ze Słowem Bożym</h1>
 <p>Wspólnota Ruchu Światło-Życie</p>
-<h1>Lectio Divina</h1>
+<p><a href="http://www.onjest.pl">http://www.onjest.pl</a></p>
+<p>rozważania na tydz @posts.get(0) - @posts.get(@posts.size-1) </p>
 <hr/>
 <hr/>
 <div class="pagebreak"></div>
