--- a/app/views/posts.scala.html
+++ b/app/views/posts.scala.html
@@ -26,7 +26,7 @@
 <h1>Modlitwa ze Słowem Bożym</h1>
 <p>Wspólnota Ruchu Światło-Życie</p>
 <p><a href="http://www.onjest.pl">http://www.onjest.pl</a></p>
-<p>rozważania na tydz @posts.take(0).formattedDate - @posts.take(posts.size-1).formattedDate </p>
+<p>rozważania na tydz @posts.head.formattedDate - @posts.last.formattedDate </p>
 <hr/>
 <hr/>
 <div class="pagebreak"></div>
