--- a/app/views/posts.scala.html
+++ b/app/views/posts.scala.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<h1>Lectio Divina</h1>
-<h2>Modlitwa ze Słowem Bożym</h2>
+<h2>Lectio Divina</h2>
+<h3>Modlitwa ze Słowem Bożym</h3>
 <p>Wspólnota Ruchu Światło-Życie</p>
-<p><a href="http://www.onjest.pl">http://www.onjest.pl</a></p>
-<p>rozważania na tydz @posts.head.formattedDate - @posts.last.formattedDate </p>
+<p><a href="http://www.onjest.pl/slowo">http://www.onjest.pl/slowo</a></p>
+<p>rozważania: @posts.head.formattedDate - @posts.last.formattedDate </p>
 <hr/>
 <div id="toc">
   <ul>
